# NDKVoice

./: build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/fanyuanhua/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_example_fanyuanhua_ndkdemo_tool_FFmpegCmd.h  com_example_fanyuanhua_ndkdemo_tool_FmodUtils.h  mixed-voice.cpp  native-lib.cpp  text-demo.cpp
app/src/main/cpp/inc/: fmod_dsp_effects.h
app/src/main/java/: com_example_fanyuanhua_ndkdemo_tool_FmodUtils.h
app/src/main/java/com/example/fanyuanhua/ndkdemo/: MainActivity.java  MixedVoiceActivity.java  VoiceChangeActivity.java
app/src/main/java/com/example/fanyuanhua/ndkdemo/adapter/: VoiceAdapter.java
app/src/main/java/com/example/fanyuanhua/ndkdemo/bean/: VoiceBean.java
app/src/main/java/com/example/fanyuanhua/ndkdemo/tool/: FFmpegCmd.java  FmodUtils.java  ObservableModel.java
app/src/main/res/drawable/: color_3.xml
app/src/main/res/layout/: activity_main.xml  activity_mixed_voice.xml  activity_voice_change.xml  item_grid_icon.xml  voice_type.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/test/java/com/example/fanyuanhua/ndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
